# mesa

./: .editorconfig  .gitlab-ci.yml  meson.build  meson.options  meson_options.txt
.gitlab-ci/: android-cts-runner.sh  cuttlefish-runner.sh  deqp-runner.sh  farm-rules.yml  gtest-runner.sh  image-tags.yml  setup-test-env.sh  test-source-dep.yml
.gitlab-ci/common/: init-stage2.sh
.gitlab-ci/container/: build-bindgen.sh  build-piglit.sh  build-vulkan-validation.sh  gitlab-ci.yml  install-meson.sh  strip-rootfs.sh
.gitlab-ci/container/alpine/: x86_64_build.sh
.gitlab-ci/container/debian/: test-vk.sh
.gitlab-ci/lava/: lava-gitlab-ci.yml
.gitlab-ci/meson/: build.sh
.gitlab-ci/piglit/: piglit-runner.sh  piglit-traces.sh
.gitlab-ci/test/: gitlab-ci.yml
android/: Android.mk  mesa3d_cross.mk
docs/: android.rst  conf.py  dispatch.rst  egl.rst  envvars.rst  faq.rst  features.txt  gitlab-ci.yml  index.rst  install.rst  isaspec-doc-wrapper.py  meson.build  meson.rst  releasing.rst  submittingpatches.rst
docs/ci/: index.rst
docs/drivers/: llvmpipe.rst  panfrost.rst  zink.rst
docs/drivers/amd/: hang-debugging.rst
docs/gallium/: screen.rst
docs/gallium/cso/: rasterizer.rst
docs/relnotes/: new_features.txt
include/: meson.build
include/GL/: glext.h
include/drm-uapi/: amdgpu_drm.h  msm_drm.h  panthor_drm.h  rocket_accel.h  xe_drm.h
include/pci_ids/: iris_pci_ids.h
src/: meson.build
src/amd/ci/: gitlab-ci.yml  radv-navi21-aco-fails.txt  radv-navi31-aco-fails.txt  radv-polaris10-aco-fails.txt  radv-tahiti-aco-fails.txt  radv-vangogh-aco-fails.txt
src/amd/common/: ac_gpu_info.c  ac_gpu_info.h  ac_linux_drm.c  ac_linux_drm.h  ac_shader_args.h  ac_surface.c  ac_surface.h  ac_vcn_enc.h
src/amd/compiler/: README-ISA.md  aco_assembler.cpp  aco_builder_h.py  aco_form_hard_clauses.cpp  aco_insert_NOPs.cpp  aco_insert_delay_alu.cpp  aco_insert_exec_mask.cpp  aco_insert_waitcnt.cpp  aco_instruction_selection.cpp  aco_instruction_selection.h  (+31 more)
src/broadcom/: meson.build
src/compiler/: shader_info.h
src/drm-shim/: drm_shim.c  drm_shim.h
src/egl/: meson.build
src/freedreno/: meson.build
src/freedreno/decode/generate-rd/: meson.build
src/freedreno/vulkan/dgc/: meson.build  preprocess.comp  tu_dgc.h
src/gallium/: meson.build
src/glx/: dri2_glx.c  dri3_glx.c  dri_common.c  dri_common.h  drisw_glx.c  drisw_glx_metal.m  glx_pbuffer.c  glxclient.h  glxext.c  meson.build
src/loader/: loader.c  loader.h  loader_wayland_helper.c  loader_wayland_helper.h  meson.build
src/mapi/: u_current.c
src/mesa/: meson.build
src/nouveau/vulkan/video/: decode.rs  extern.c  lib.rs  meson.build  trace.rs  video.h  video_bindings.h
src/nouveau/vulkan/video/decode/: h264.rs  h265.rs
src/panfrost/: .clang-format  meson.build
src/panfrost/libpan/: indirect_dispatch.cl  libpan.h  meson.build  placeholder.cl
src/rust/mesa3d_magma/: Cargo.toml  build.rs  meson.build
src/rust/mesa3d_magma/headers/windows/: d3dkmt_wrapper.h
src/rust/mesa3d_magma/src/: encoder.rs  lib.rs  magma.rs  magma_defines.rs  traits.rs
src/rust/mesa3d_magma/src/sys/: mod.rs
src/rust/mesa3d_magma/src/sys/linux/: amdgpu.rs  common.rs  drm.rs  mod.rs  msm.rs
src/rust/mesa3d_magma/src/sys/linux/bindings/: amdgpu_bindings.rs  drm_bindings.rs  mod.rs  msm_bindings.rs
src/rust/mesa3d_magma/src/sys/windows/: amd.rs  d3dkmt_common.rs  mod.rs  wddm.rs
src/rust/mesa3d_magma/src/sys/windows/d3dkmt_bindings/: mod.rs
src/rust/mesa3d_magma_ffi/: Cargo.toml  meson.build
src/rust/mesa3d_magma_ffi/src/: lib.rs
src/rust/mesa3d_magma_ffi/src/include/: magma.h  magma_defines.h
src/rust/mesa3d_util/: Cargo.toml  meson.build
src/rust/mesa3d_util/src/: defines.rs  descriptor.rs  error.rs  lib.rs  memory_mapping.rs  shm.rs
src/rust/mesa3d_util/src/bytestream/: mod.rs
src/rust/mesa3d_util/src/sys/linux/: descriptor.rs  event.rs  memory_mapping.rs  pipe.rs  shm.rs  tube.rs  wait_context.rs
src/rust/mesa3d_util/src/sys/stub/: descriptor.rs  event.rs  pipe.rs  shm.rs
src/rust/mesa3d_util/src/sys/windows/: descriptor.rs  macros.rs  memory_mapping.rs  mod.rs  shm.rs  tube.rs  wait_context.rs
src/rust/mesa3d_virtio_gpu/: Cargo.toml  meson.build
src/rust/mesa3d_virtio_gpu/src/: lib.rs  virtgpu_kumquat.rs
src/rust/mesa3d_virtio_gpu/src/ipc/: kumquat_gpu_protocol.rs  kumquat_stream.rs  mod.rs
src/util/: 00-mesa-defaults.conf  anon_file.c  bitpack_helpers.h  bitscan.h  disk_cache.c  disk_cache_os.c  driconf.h  fossilize_db.c  mesa_cache_db.c  mesa_cache_db_multipart.c  meson.build  os_misc.c  simple_mtx.h  u_cpu_detect.c  u_sync_provider.h  u_thread.c  u_vector.c
src/virtio/: meson.build
src/virtio/targets/vcl/: meson.build  vcl.icd.in
src/virtio/vcl/: api.rs  core.rs  dev.rs  lib.rs  meson.build  protocol.rs  vcl_drm_bindings.h  vcl_mman_bindings.h  vcl_opencl_bindings.h  vcl_sys_bindings.h  vcl_sys_inline_bindings_wrapper.c  vcl_sys_inline_bindings_wrapper.h  vcl_virglrenderer_bindings.h  vcl_vtest_bindings.h
src/virtio/vcl/api/: context.rs  device.rs  event.rs  icd.rs  kernel.rs  memory.rs  platform.rs  program.rs  queue.rs  test_util.rs  types.rs  util.rs
src/virtio/vcl/core/: context.rs  device.rs  event.rs  format.rs  kernel.rs  memory.rs  platform.rs  program.rs  queue.rs
src/virtio/vcl/dev/: debug.rs  drm.rs  renderer.rs  resource.rs  virtgpu.rs  vtest.rs
src/virtio/vcl/protocol/: context.rs  cs.rs  cs_impl.rs  defines.rs  device.rs  dummy.rs  event.rs  handles.rs  info.rs  kernel.rs  lib.rs  memory.rs  platform.rs  program.rs  queue.rs  ring.rs  structs.rs  transport.rs  types.rs  util.rs
src/vulkan/: meson.build
subprojects/: bitflags.wrap  equivalent.wrap  frog-protocols.wrap  hashbrown.wrap  indexmap.wrap  libc.wrap  log.wrap  memoffset.wrap  nix.wrap  once_cell.wrap  paste.wrap  pest.wrap  pest_derive.wrap  pest_generator.wrap  pest_meta.wrap  proc-macro2.wrap  quote.wrap  roxmltree.wrap  syn.wrap  thiserror-impl.wrap  thiserror.wrap  ucd-trie.wrap  unicode-ident.wrap
subprojects/packagefiles/memoffset/: meson.build
subprojects/packagefiles/nix/: meson.build
(+1281 files in other folders)
