[package]
name = "mesa3d_magma"
version = "0.1.3"
authors = ["Mesa3D Authors"]
edition = "2021"
description = "This is a GPU system call abstraction crate"
license-file = "LICENSE"

[dependencies]
mesa3d_util = {path = "../mesa3d_util", version = "0.1.3"}
mesa3d_virtio_gpu = {path = "../mesa3d_virtio_gpu", version = "0.1.3"}
cfg-if = "1.0.0"
libc = "0.2.116"
remain = "0.2"
thiserror = "2.0.6"
zerocopy = { version = "0.8.13", features = ["derive"] }
log = "0.4.22"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
nix = { version = "0.28", features = ["event", "feature", "fs", "mman", "socket", "uio", "ioctl", "dir"] }

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winnt", "handleapi", "processthreadsapi", "winbase"]}

[build-dependencies.bindgen]
version = "^0.68.1"
features = ["runtime"]
default-features = false

[build-dependencies]
reqwest = {version = "0.12.12", features = ["blocking"]}
flate2 = "1.0.35"
tar = "0.4"
