[package]
name = "mesa3d_magma_ffi"
version = "0.1.3"
authors = ["Mesa3D Authors"]
edition = "2021"
description = "C API interface to Magma"
license-file = "LICENSE"

[lib]
name = "mesa3d_magma_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
mesa3d_magma = { path = "../mesa3d_magma", version = "0.1.3"}
mesa3d_util = { path = "../mesa3d_util", version = "0.1.3"}
libc = "0.2.93"
log = "0.4"

[profile.dev]
lto = true
incremental = false

[workspace]
