[package]
name = "mesa3d_util"
version = "0.1.3"
authors = ["Android Open Source Project (for now)"]
edition = "2021"
description = "This is a util crate that aspires to be a part of Mesa3D project"
license-file = "LICENSE"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.116"
remain = "0.2"
thiserror = "1.0.23"
zerocopy = { version = "0.7", features = ["derive"] }
log = "0.4"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
nix = { version = "0.28", features = ["event", "feature", "fs", "mman", "socket", "uio", "ioctl"] }

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winnt", "handleapi", "processthreadsapi", "winbase"]}

[build-dependencies]
pkg-config = "0.3"
anyhow = "1.0.57"
