[package]
name = "mesa3d_virtio_gpu"
version = "0.1.3"
authors = ["Android Open Source Project"]
edition = "2021"
description = "Utilities for working virtio-gpu code"
license-file = "LICENSE"

[dependencies]
mesa3d_util = {path = "../mesa3d_util", version = "0.1.3"}
zerocopy = { version = "0.8.13", features = ["derive"] }
libc = "0.2.93"
log = "0.4"

[profile.dev]
lto = true
incremental = false

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
nix = { version = "0.28", features = ["event", "feature", "fs", "mman", "socket", "uio", "ioctl"] }

[workspace]
